--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="cz">
-<script src="./language.js"></script>
+<html lang="cs">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Confice s.r.o.</title>
     <link id="titleIcon" rel="icon" type="image/svg" href="img/c.svg"/>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".navbar" onload="setFirstLanguage()">
+
+<body data-spy="scroll" data-target=".navbar" onload="setUp()">
+
+<!--script src="./language.js"></script-->
 <!-- Navigation -->
 <div id="top"></div>
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img id="conficeLogo" src="img/confice.svg"> <!-- Replace with logo -->
+            <img id="conficeLogo" src="img/confice.svg" alt="Confice">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -28,20 +30,28 @@
             <ul class="navbar-nav ml-auto">
                 <li><a id="menu-home" class="nav-link active" href="#top">Úvod</a></li>
                 <li><a id="menu-about" class="nav-link" href="#about">O nás</a></li>
-                <li><a id="menu-portfolio" class="nav-link" href="#">Portfolio</a></li>
+                <li><a id="menu-job" class="nav-link" href="#job">Kariéra</a></li>
+                <!--<li><a id="menu-portfolio" class="nav-link" href="#">Portfolio</a></li>-->
                 <li><a id="menu-contacts" class="nav-link" href="#contacts">Kontakty</a></li>
                 <li>
                     <div class="dropdown">
-                        <a class="nav-link dropdown-toggle" type="button" id="languageDropdownButton"
+                        <!--a href="" class="nav-link dropdown-toggle" id="languageDropdownButton"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Jazyk
-                        </a>
+                        </a-->
                         <div id="languageDropdown" class="dropdown-menu" aria-labelledby="languageDropdownButton">
                             <a id="lang-cz" class="dropdown-item">Česky</a>
                             <a id="lang-en" class="dropdown-item">Anglicky</a>
                             <script>
-                                document.getElementById("lang-cz").addEventListener("click", evt => setLanguage("cz"));
-                                document.getElementById("lang-en").addEventListener("click", evt => setLanguage("en"));
+                                let lang;
+
+                                function setUp(){
+                                    lang = new Language();
+                                    lang.setFirstLanguage();
+                                }
+
+                                document.getElementById("lang-cz").addEventListener("click", evt => lang.setLanguage("cz"));
+                                document.getElementById("lang-en").addEventListener("click", evt => lang.setLanguage("en"));
                             </script>
                         </div>
                     </div>
@@ -54,50 +64,33 @@
 
 <!--- Image Slider -->
 <div id="slides" class="carousel slide" data-ride="carousel">
+    <!--
     <ul class="carousel-indicators">
         <li data-target="#slides" data-slide-to="0" class="active"></li>
         <li data-target="#slides" data-slide-to="1"></li>
         <li data-target="#slides" data-slide-to="2"></li>
     </ul>
+    -->
     <div class="carousel-inner">
+        <div class="carousel-caption">
+            <h1 id="welcome-title" class="display-2">Vítejte</h1>
+            <h3 id="welcome-text">na stránkách firmy Confice s.r.o., společnosti zaměřené na vývoj a konstrukci
+                individuálních technických řešení a na jejich a uvedení do výroby.</h3>
+        </div>
         <div class="carousel-item active">
-            <img src="img/drill-444493_1920.png">
-            <div class="carousel-caption">
-                <h1 id="welcome-title" class="display-2">Vítejte</h1>
-                <h3 id="welcome-text">na stránkách firmy Confice s.r.o., společnosti zaměřené na vývoj a konstrukci
-                    individuálních technických řešení a na jejich a uvedení do výroby.</h3>
-                <!--
-                <a href="#" class="btn btn-outline-light bt-lg">Start course</a>
-                -->
-            </div>
+            <img src="img/drill-444493_1920.png" alt="">
         </div>
         <div class="carousel-item">
-            <img src="img/drill-444493_1920.png">
+            <img src="img/drill-444493_1920.png" alt="">
         </div>
         <div class="carousel-item">
-            <img src="img/drill-444493_1920.png">
+            <img src="img/drill-444493_1920.png" alt="  ">
         </div>
     </div>
 
 </div>
 
 
-<!--- Jumbotron
-<div class="container-fluid">
-    <div class="row jumbotron text-center">
-        <div class="col-lg-7 col-xl-8 pt-4">
-            <h4>Check out w3newbie Website Templates & Courses!</h4>
-        </div>
-        <div class="col-lg-5 col-xl-4">
-            <a href="https://w3newbie.com/courses/" target="_blank" class="btn btn-secondary btn-lg">W3NEWBIE
-                COURSES</a>
-        </div>
-    </div>
-</div>
--->
-
-
-<div id="about"></div>
 <!--- Welcome Section -->
 <div class="container-fluid">
     <div class="row justify-content-center text-center mt-4">
@@ -108,54 +101,147 @@
     </div>
 </div>
 
-<!--- Three Column Section -->
+<!--- Four Column Section -->
 <div class="container-fluid">
-    <div class="row text-center">
-        <div class="col-sm-6 col-md-3">
-            <img src="img/icons/wrench-ico.png"></img>
-            <h3 id="h-design">Konstrukční návrh</h3>
-            <p id="p-design">Ve 3D, na míru dle požadavků zákazníka.</p>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <img src="img/icons/manual-ico.png"></img>
-            <h3 id="h-documentation">Dokumentace</h3>
-            <p id="p-documentation">3D modely, výkresy, údržbové a uživatelské manuály.</p>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <img src="img/icons/vypocty-ico.png"></img>
-            <h3 id="h-calc">Výpočty</h3>
-            <p id="p-calc">Statické / Dynamické</p>
-        </div>
-        <div class="col-md-3">
-            <img src="img/icons/solution-ico.png"></img>
-            <h3 id="h-pnd">Výroba a dodání</h3>
-            <p id="p-pnd">Zařízení kompletní výroby a dodání objednaného zařízení jako celku.</p>
-        </div>
+    <div class="row text-center icons-section">
+        </a>
+        <a class="col-sm-6 col-md-4 spaced cards" href="#development">
+            <div class="navCard">
+                <img src="img/icons/vypocty-ico.png" alt=""/>
+                <h3 id="h-dev">Vývoj</h3>
+            </div>
+        </a>
+        <a class="col-sm-6 col-md-4 spaced cards" href="#construction">
+        <div class="navCard">
+        <img src="img/icons/wrench-ico.png" alt=""/>
+        <h3 id="h-design">Konstrukce</h3>
+    </div>
+        <a class="col-sm-6 col-md-4 spaced cards" href="#production">
+            <div class="navCard">
+                <img src="img/icons/solution-ico.png" alt=""/>
+                <h3 id="h-production">Výroba</h3>
+            </div>
+        </a>
     </div>
 </div>
 
+<!-- About us -->
+<div id="about"></div>
+<br>
 <hr class="my-4">
 <!--- Two Column Section -->
 <div class="container-fluid">
     <div class="row my-5 mx-3">
         <div class="col-lg-6">
             <h2 id="h-about">O nás</h2>
-            <p id="p-about1">Společnost Confice s.r.o. vznikla za účasti tří dlouhodobých partnerů po řadě úspěšných
-                projektů v
-                oblasti konstrukce a výroby jednoúčelových strojů.
-                Motivem pro její založení bylo uspokojení zvyšující se poptávky po službách, do té doby poskytovaných v
-                rámci neoficiálního obchodního partnerství
-                fyzických osob a jejich zkvalitnění.</p>
-            <p id="p-about2">Naší vizí je prosadit se na trhu jako spolehlivá důvěryhodná firma.
-                Toho chceme docílit individuálním soustředěným přístupem k jednotlivým projektům,
-                férovým jednáním a pečlivě nastavenou cenovou politikou.</p>
+            <p id="p-about1">Společnost Confice s.r.o. vznikla v roce 2018, jako společnost dodávající zkušební a měřící přípravky odběratelům v automotive.
+                Za dobu působení se naše činnost rozrostla zejména o oblast konstrukce a výroby jednoúčelových strojů a o vlastní výrobní kapacity.
+                Neustále usilujeme o zvětšení rozsahu našich služeb a jejich zkvalitnění, tak, abychom celistvě pokrývali potřeby našich zákazníků.</p>
+            <p id="p-about2">Naší vizí je prosadit se na trhu jako spolehlivá důvěryhodná firma díky komplexnímu a individuálnímu přístupu k zákazníkům, jejich projektům a potřebám.</p>
 
-            <!--
-            <a href="#" class="btn btn-outline-dark">Learn more</a>
-            -->
         </div>
         <div class="col-lg-6">
-            <img src="img/woman.jpg">
+            <img src="img/woman.jpg" alt="">
+        </div>
+    </div>
+
+</div>
+
+<!-- Development -->
+<div id="development"></div>
+<br>
+<hr class="my-4">
+<!--- Two Column Section -->
+<div class="container-fluid">
+    <div class="row my-5 mx-3 parent">
+        <div class="section-text">
+            <h2 id="h-development-section">Vývoj</h2>
+            <p id="p-development-section-1">Můžeme být Vašimi partnery v jakékoliv vývojové etapě Vašeho projektu - budeme spolupracovat na úvodním konceptu, provedeme prvotní konstrukční iterace, realizujeme pro Vás prototypovou výrobu.</p>
+            <p id="p-development-section-2">Připravíme pro Vás podklady pro zavedení sériové výroby, zajistíme dodavatelský řetězec.</p>
+        </div>
+        <div id="devImg1">
+            <img class="portfolio-img" src="img/vývoj3.jpg" alt="">
+        </div>
+        <div id="devImg2">
+            <img class="portfolio-img" src="img/vývoj1.jpg" alt="">
+        </div>
+        <div id="devImg3">
+            <img class="portfolio-img" src="img/vývoj2.jpg" alt="">
+        </div>
+
+
+    </div>
+
+</div>
+
+
+
+<!-- Construction -->
+<div id="construction"></div>
+<br>
+<hr class="my-4">
+<!--- Two Column Section -->
+<div class="container-fluid">
+    <div class="row my-5 mx-3 parent">
+        <div class="section-text">
+            <h2 id="h-construction-section">Konstrukce</h2>
+            <p id="p-construction-section-1">Pracujeme v programu Autodesk Inventor.</p>
+            <p id="p-construction-section-2" >Dle Vaší specifikace zpracujeme 3D a 2D dokumentaci, provedeme výpočty, simulace, rendery, vytvoříme kusovníky manuály a technologické postupy.</p>
+            <p id="p-construction-section-3" >Zadání může mít formu vstupních 3D modelů, požadavku na provedení kontrolní operace, či pracovního cyklu.</p>
+
+
+        </div>
+        <div id="constrImg1">
+            <img class="portfolio-img" src="img/konstrukce2.png" alt="">
+        </div>
+        <div id="constrImg2">
+            <img class="portfolio-img" src="img/konstrukce1.jpg" alt="">
+        </div>
+        <div id="constrImg3">
+            <img class="portfolio-img" src="img/konstrukce.png" alt="">
+        </div>
+    </div>
+</div>
+
+
+<!-- Production and Delivery -->
+<div id="production"></div>
+<br>
+<hr class="my-4">
+<!--- Two Column Section -->
+<div class="container-fluid">
+    <div class="row my-5 mx-3 parent">
+        <div class="section-text">
+            <h2 id="h-production-section">Výroba</h2>
+
+            <p id="p-production-section-1">Nabízíme tříosé obrábění lehkých slitin, plastů a umělého dřeva do rozměru
+                polotovaru 400x300x140 mm. Programujeme a sestavujeme automatizační celky s PLC Siemens, RevPi a
+                dalšími. Provádíme sestavení a oživení pracovních stanic a strojů.</p>
+            <p id="p-production-section-2">Zajistíme dodávku výpalků, soustružených dílů, svařenců a dalších polotovarů.</p>
+            <p id="p-production-section-3">Jsme vybaveni běžnými strojírenskými měřidly pro posuzování shody vyráběných dílů.
+                Kontrolní přípravky dodáme seřízené s měřícím protokolem z CMM. Je možné provést MSA analýzu.
+                Pro stanovené výrobky zajistíme CE certifikaci.
+            </p>
+
+        </div>
+
+        <div id="prodImg1">
+            <img class="portfolio-img" src="img/výroba5(1).jpg" alt="">
+        </div>
+        <div id="prodImg2">
+            <img class="portfolio-img" src="img/výroba3.jpg" alt="">
+        </div>
+        <div id="prodImg3">
+            <img class="portfolio-img" src="img/výroba4.jpg" alt="">
+        </div>
+        <div id="prodImg4">
+            <img class="portfolio-img" src="img/výroba5.jpg" alt="">
+        </div>
+        <div id="prodImg5">
+            <img class="portfolio-img" src="img/výroba1.png" alt="">
+        </div>
+        <div id="prodImg6">
+            <img class="portfolio-img" src="img/výroba6.jpg" alt="">
         </div>
     </div>
 
@@ -170,82 +256,38 @@
     </div>
 </figure>
 
-
-<!--- Two Column Section -->
-
-<div class="container-fluid">
-    <div class="row my-5 mx-3">
-        <div class="col-lg-6">
-            <h2>Heading heading</h2>
-            <p>Blabla bla bla bla blablabla</p>
-            <p>Bla blablabla bla bla blabla bla</p>
-            <p>Blablabla blabla bla blablablabla blablabla bla blabla</p>
-
-            <!--
-            <a href="#" class="btn btn-outline-dark">Learn more</a>
-            -->
-        </div>
-        <div class="col-lg-6">
-            <img class="portfolio-img" src="img/desk.jpg">
-        </div>
-    </div>
-
-</div>
-
-
-<!--- Connect
-<hr class="my-4">
-
-
-<div class="container-fluid">
-    <div class="row text-center">
-        <div class="col-12">
-            <h2>Connect With Us</h2>
-        </div>
-        <div class="col-12 social">
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-        </div>
-    </div>
-</div>
--->
+<div id="job"></div>
+<br>
+<br>
 
 <!--- Footer -->
 <footer>
+
     <div id="contacts" class="container-fluid">
         <div class="row text-center">
             <div class="col-md-6">
                 <h5 id="h-contact">Kontaktujte nás</h5>
                 <hr class="border">
-                <p id="p-phonenum">+420 123 456 789</p>
-                <p id="p-mail">mail@email.cz</p>
-                <p id="p-address1">420 Yeet Street</p>
-                <p id="p-address2">Hradec Králové, Česká Republika, 500 00</p>
+                <p id="p-company-name">Confice s.r.o.</p>
+                <p id="p-identification-num">IČO: 06935681</p>
+                <p id="p-tax-id">DIČ: CZ06935681</p>
+                <p id="p-phonenum">+420 774 298 642</p>
+                <p id="p-mail">info@confice.cz</p>
             </div>
+
             <div class="col-md-6">
-                <h5 id="h-hours">Otevírací doba</h5>
+                <h5 id="h-office">Kancelář</h5>
                 <hr class="border">
-                <p id="p-hours1">Po-Pá 00:00-24:00</p>
-                <p id="p-hours2">So-Ne zavřeno</p>
+                <p id="p-address1">Kladská 1194/18, Slezské Předměstí</p>
+                <p id="p-address2">Hradec Králové, Česká Republika, 500 03</p>
             </div>
-            <!--
-           <div class="col-md-4">
-               <h5>Service area</h5>
-               <hr class="border">
-               <p>Hradec Králové, Czech Republic, 500 00</p>
-               <p>Hradec Králové, Czech Republic, 500 00</p>
-               <p>Hradec Králové, Czech Republic, 500 00</p>
-               <p>Hradec Králové, Czech Republic, 500 00</p>
-           </div>
-           -->
-            <!--
+
+
             <div class="col-12">
                 <hr class="socket">
                 <h5>&copy; Jakub Hrneček</h5>
             </div>
-            -->
+
         </div>
     </div>
 </footer>
