--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="navbar-nav ml-auto">
                 <li><a id="menu-home" class="nav-link active" href="#top">Úvod</a></li>
                 <li><a id="menu-about" class="nav-link" href="#about">O nás</a></li>
-                <li><a id="menu-job" class="nav-link" href="#job">Kariéra</a></li>
+                <!--li><a id="menu-job" class="nav-link" href="#job">Kariéra</a></--li-->
                 <li><a id="menu-contacts" class="nav-link" href="#contacts">Kontakty</a></li>
                 <li>
                     <div class="dropdown">
